apps/grupo-teste/webapp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-app-route
  labels:
    gateway: my-gateway
spec:
  parentRefs:
    - name: cluster-gateway-gateway # Nome do seu Gateway existente
      namespace: default
  hostnames:
    - "grupo-teste.internal"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-app-service
          port: 8083
